--- a/css/index.css
+++ b/css/index.css
@@ -57,7 +57,7 @@ ol {
 .logo {
   font-family: "Raleway";
   font-weight: bold;
-  font-size: 26px;
+  font-size: 1.625rem;
   line-height: 31px;
   color: var(--main-color);
 }
@@ -74,7 +74,7 @@ ol {
 .navigation__list {
   display: flex;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 16px;
   letter-spacing: 0.02em;
 }
@@ -101,7 +101,7 @@ ol {
   color: #757575;
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 16px;
   letter-spacing: 0.02em;
 }
@@ -117,14 +117,22 @@ ol {
 
 .section-business {
   padding: 200px 0 280px 0;
-  background-color: var(--third-color);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .business__title {
   width: 696px;
   margin: 0 auto 40px;
   font-weight: 900;
-  font-size: 44px;
+  font-size: 2.75rem;
   line-height: 60px;
   text-align: center;
   letter-spacing: 0.06em;
@@ -141,7 +149,7 @@ ol {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 30px;
   color: var(--fourth-color);
   letter-spacing: 0.06em;
@@ -157,11 +165,21 @@ ol {
 .what-we-do__list {
   display: flex;
 }
-
+/* .icon-container {
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+} */
 .what-we-do__subtitle {
   margin-bottom: 10px;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -171,7 +189,7 @@ ol {
 .what-we-do__text {
   width: 270px;
   margin-bottom: 94px;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: #757575;
@@ -184,7 +202,7 @@ ol {
 .what-we-do__title {
   margin-bottom: 50px;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 2.25rem;
   line-height: 42px;
   text-align: center;
   letter-spacing: 0.03em;
@@ -229,7 +247,7 @@ ol {
 
 .our-team__title {
   font-weight: 500;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 19px;
   margin-bottom: 10px;
   text-align: center;
@@ -240,7 +258,7 @@ ol {
 .our-team__subtitle {
   display: block;
   margin: 0 auto;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 19px;
   text-align: center;
   letter-spacing: 0.03em;
@@ -252,10 +270,14 @@ ol {
   background-color: #2f303a;
 }
 
+.logo-footer {
+  margin-bottom: 20px;
+}
+
 .footer__address {
   margin-top: 20px;
   margin-bottom: 9px;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 24px;
   font-style: normal;
   letter-spacing: 0.03em;
@@ -267,7 +289,111 @@ ol {
 }
 .footer__contact {
   font-style: normal;
-  font-size: 14px;
+  font-size: 0.875rem;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer__contact:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+/* portfolio */
+
+.section-cards {
+  padding: 94px 0;
+}
+
+.cards__list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.cards__list-item:not(:last-child) {
+  margin-right: 8px;
+}
+.cards__list-item-btn {
+  font-family: var(--main-font);
+  padding: 6px 22px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  color: var(--second-color);
+}
+
+.cards__list-item-btn:hover,
+.cards__list-item-btn:focus {
+  color: var(--fourth-color);
+  background-color: var(--main-color);
+}
+
+.img__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.wrapper-img {
+  width: 370px;
+  height: 404px;
+  margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.img__list-item:nth-child(3n) {
+  margin-right: 30px;
+}
+
+.img__title {
+  margin: 20px 24px 4px 24px;
+  font-weight: bold;
+  font-size: 1.125rem;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: var(--second-color);
+}
+
+.img__subtitle {
+  font-size: 1rem;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin: 0 24px 20px 24px;
+}
+
+.footer {
+  padding: 60px 0;
+  background-color: #2f303a;
+}
+
+.logo-footer {
+  margin-bottom: 20px;
+}
+.footer__address {
+  margin-bottom: 9px;
+  font-size: 0.875rem;
+  line-height: 24px;
+  font-style: normal;
+  letter-spacing: 0.03em;
+  color: var(--fourth-color);
+}
+
+.logo-span-footer {
+  color: var(--fourth-color);
+}
+.footer__contact {
+  font-style: normal;
+  font-size: 0.875rem;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
